--- a/Website dev/UnderPage2.html
+++ b/Website dev/UnderPage2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Dk">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Exam1Project</title>
     <link rel="stylesheet" href="UP2.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-   <script scr="responsivemenu"></script>
+    <script src="responsivemenu.js" defer></script>
    </head>
 <body>
    <div class="Wrapper">
@@ -26,32 +26,27 @@
    <header class="picbox">
    </header>
          <div class="textbox"> <!-- Something is broke with this code check later for at fix+ underpage 1-->
-         <h1>Praktisk information</h1>
-         <p>Text om praktisk information</p>
+         <h1>Om os</h1>
+         <p>Her kan du finde diverse information om hvem vi er, som et lægehus, personalet og placering</p>
          </div>
 </section>
 <!-- box section with link to other section -->
 <section class="boxes">
    <div class="box">
-         <a href="Link der ikke virker">
-         <h1>Nye bruger</h1>
-         <i class="fa-solid fa-user"></i>
-         <p class="More info">Her kan du oprettet dig som en ny bruger</p>
-         </a>
+         <h2>Medarbejde</h2>
+         <p>Til daglig har vi 50 medarbejder med der aktivt prøver at gøre det bedste for at hjælpe den enkel patient. Vi er omkring 42 praktiserene læger, samt 8 person der står for at modtage opkalde om patient problemer og mange andre forskellige stillinger   </p>
          </div>
          <div class="box">
-         <a href="Link der ikke virker">
-         <h1>Nye bruger</h1>
-         <i class="fa-solid fa-user"></i> <!-- Icon that are being used-->
-         <p class="More info">Her kan du oprettet dig som en ny bruger</p>
-         </a>
+         <h4>Hvad kan vi gøre for dig?</h4>
+         <p>Vi kan tilbyde diverse behandligner, for hvad end du har problemer med. Giv rådgivning omkring de diverse ting såsom. graviditetundersøgelser, Vacation information for både voksen og børn. Vi her for kunne hjælpe med problemet. </p>
          </div>
          <div class="box">
-         <a href="Link der ikke virker">
-         <h1>Nye bruger</h1>
-         <i class="fa-solid fa-user"></i> <!-- Icon that are being used-->
-         <p class="More info">Her kan du oprettet dig som en ny bruger</p>
-         </a>
+         <h5>Placering og parkingsmuligheder</h5>
+         <p>Her kan du finde information omkring placering af lægehuset</p>
+         <p>7400 Herning</p>
+         <p>Venstre anlæg 42,1 etage</p>
+
+         
          </div>
 </section>
 <footer>
