--- a/Website dev/UnderPage1.html
+++ b/Website dev/UnderPage1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Dk">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,8 @@
     <title>Exam1Project</title>
     <link rel="stylesheet" href="UP1.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-   <script scr="responsivemenu"></script>
+    <script src="https://kit.fontawesome.com/546789d2ca.js" crossorigin="anonymous"></script>
+    <script src="responsivemenu.js" defer></script>
 </head>
 <body>
     <div class="Wrapper">
@@ -27,20 +28,29 @@
     </header>
           <div class="boxtext">
           <h1>Praktisk information</h1>
-          <p>Text om praktisk information</p>
+          <p>Her kan du finde praktisk information omkring hvilken servicer vi tilbyder på dette lægehus. Hvor du kan finde og tage kontakt til os  </p>
           </div>
  </section>
   <!-- box section with link to other section -->
   <section class="boxess">
      <div class="boxx">
-           <h4>Welkomme til RiingsKøbs Lægehuse </h4>
-           <p>Her på Riings lægehus,dig velkommen til vores
-              lægehus. Hvor vi kan Tilbyde diverse forskellige 
-              Muligheder for  Behandligner. Såsom, Vacationer, 
-              allagiundersøgelse, graviditetundersøgelser og mange andre 
-              forskellige undersøgelser.Vi glæder os til at kunne Hjælpe dig
-              </p>
-           </div>      
+           <p class="H-p">Vaccine</p>
+           <p>Her kan du finde alle de vigtigt information angående vacation omkring, hvilken vi tilbyder på på lægehuset </p>
+           <i class="fa-regular fa-syringe fa-3x"></i>  
+         </div>
+           <div class="boxx">
+            <p class="H-p">Telefon</p>
+            <p>Telefon nummeret til vores lægehus</p>
+            <i class="fa-solid fa-phone fa-3x"></i>
+           <p>22 44 11 -00</p>
+           </div>
+           <div class="boxx">
+            <p class="H-p">Placering og parkingsmuligheder</p>
+           <p></p>
+           <i class="fa-solid fa-location-dot fa-3x"></i><!-- Icon that are being used-->
+            <p>7400 Herning</p>
+            <p>Venstre anlæg 42,1 etage</p>
+           </div>     
   </section>
   <footer>
      <div class="footer">
