--- a/Website dev/UnderPage3.html
+++ b/Website dev/UnderPage3.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="Dk">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam1Project</title>
-    <link rel="stylesheet" href="UP3">
+    <link rel="stylesheet" href="UP3.css">
+    <script src="https://kit.fontawesome.com/546789d2ca.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <script src="responsivemenu.js" defer></script>
 </head>
 <body>
-   <nav>
       <div class="Wrapper">
          <!-- Nav bar -->
          <nav class="main-nav">
@@ -19,32 +21,30 @@
                <li><a href="UnderPage2.html">Om Os</a></li>
                <li><a href="UnderPage3.html">at være patientet</a></li>
             </ul>
-         </nav>
    </nav>
   <!-- Top container -->
   <section class="top-container">
-   <header class="textbox">
-   </header>
-         <h1>At være patientet</h1>
+   <div class="textbox"><p class="H-p">Være patientet</p></div>
 </section>
-<section class="boxes"></section>
-<div class="box">
-   <a href="Link der ikke virker">
-   <h1>Nye bruger</h1>
-   <i class="fa-solid fa-user"></i> <!-- Icon that are being used-->
-   <p class="More info">Her kan du oprettet dig som en ny bruger</p>
-   </a>
-   </div>
-   <div class="box">
-   <a href="Link der ikke virker">
-   <h1>Nye bruger</h1>
-   <i class="fa-solid fa-user"></i> <!-- Icon that are being used-->
-   <p class="More info">Her kan du oprettet dig som en ny bruger</p>
-   </a>
-   </div>
+
+<section class="boxess">
+         <div class="boxx">
+          <p class="H-p">Hvordan er det at være patientet hos os?</p>
+          <p>At være en patientet hos er at </p>
+         </div>
+         <div class="boxx">
+            <p class="H-p"> Her kan du logge ind på din sundheds profil</p>
+            <br>
+            <a href="Homepage.html" class="btn">Log ind for selv-service</a>
+         <p></p>
+         <i class="fa-solid fa-right-to-bracket fa-3x"></i><!-- Icon that are being used-->
+         </div>     
 </section>
-   <footer>
-      <p>dette site har kun til undervisnings formål</p>
-   </footer>
+<footer>
+   <div class="footer">
+<p>dette site har kun til undervisnings formål</p>
+</div>
+</footer>
+</div>
 </body>
 </html>
