--- a/3.0/UnderPage3.html
+++ b/3.0/UnderPage3.html
@@ -15,7 +15,7 @@
       <div class="Wrapper">
          <!-- Nav bar -->
          <nav class="main-nav">
-            <img src="Img/PlaceHolderLogo.png" alt="">
+            <img src="Img/logo.png" alt="">
             <ul>
                <li><a href="index.html">Forside</a></li>
                <li><a href="UnderPage1.html">information</a></li>
