--- a/3.0/UnderPage1.html
+++ b/3.0/UnderPage1.html
@@ -14,14 +14,16 @@
 <body>
     <div class="Wrapper">
         <!-- Nav bar -->
-        <nav class="main-nav">
+        <nav class="navbar">
            <img src="Img/logo.png" alt="">
+           <div class="navbar-links">
            <ul>
               <li><a href="index.html">Forside</a></li>
               <li><a href="UnderPage1.html">information</a></li>
               <li><a href="UnderPage2.html">Om Os</a></li>
               <li><a href="UnderPage3.html">at være patientet</a></li>
            </ul>
+         </div>
         </nav>
   <!-- Top container -->
   <section class="top-container">
